<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">


        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/name"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txt_time_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/time_and_dates"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


    <TextView
        android:id="@+id/txt_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/caption"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/color4" />

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxHeight="300sp"
        android:maxWidth="300sp"
        android:minHeight="300sp"
        android:minWidth="300sp"
        android:adjustViewBounds="true"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/color4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_thumbs_up"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@color/color3"
            android:maxHeight="40sp"
            android:maxWidth="120sp"
            android:minHeight="40sp"
            android:minWidth="120sp"
            android:text="@string/love_this" />

        <TextView
            android:id="@+id/txt_up_count"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_down_count"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_thumbs_down"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@color/color6"
            android:maxHeight="40sp"
            android:maxWidth="120sp"
            android:minHeight="40sp"
            android:minWidth="120sp"
            android:text="@string/hate_this" />


    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="4dip"
        android:background="@color/color4" />
</LinearLayout>